--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@ body, td, p  {
 p{
     width:40em;
 }
+ul, ol{width:40em;}
 
 th {
 	font-family: arial,helvetica,sans-serif;
@@ -119,8 +120,8 @@ input {
 }
 
 textarea {
-    font-family: arial, helvetica, sans-serif; 
-    width: 100%; 
+    font-family: arial, helvetica, sans-serif;
+    width: 100%;
 }
 
 .prompt {
