--- a/css/style.css
+++ b/css/style.css
@@ -169,3 +169,13 @@ td.checker {
 	background-color: #007f00;
 	background-image: url(http://vim.sourceforge.net/images/checkerboard.gif);
 }
+
+.memo{
+    margin:5px; padding:5px; background:#f0f0dd none;
+}
+#footer{
+    border-width:1px 0 0 0; border-style:dashed; border-color:#ccc;
+    background:#f8f8f8 none;
+    margin:5px 0;
+    padding:5px 3px;
+}
