--- a/trunk/intro/css/style.css
+++ b/trunk/intro/css/style.css
@@ -28,7 +28,8 @@ table{table-layout:fixed; border-collapse:collapse; border-spacing:0;
 a{text-decoration:none; color:#00e;}
 a:hover{text-decoration:underline;}
 
-code{margin:1px 3px; padding:2px; display:inline-block; background:#fff7d2 none;}
+code{margin:1px 3px; padding:2px; display:inline-block; background:#fff7d2 none; border:1px solid #FAD163;
+    -moz-border-radius:4px; -khtml-border-radius:4px; -webkit-border-radius:4px; border-radius:4px;}
 
 #footer{
     border-width:1px 0 0 0; border-style:dashed; border-color:#ccc;
