--- a/trunk/intro/css/style.css
+++ b/trunk/intro/css/style.css
@@ -32,8 +32,9 @@ code{margin:1px 3px; padding:2px; display:inline-block; background:#fff7d2 none;
     -moz-border-radius:4px; -khtml-border-radius:4px; -webkit-border-radius:4px; border-radius:4px;}
 
 #footer{
-    border-width:1px 0 0 0; border-style:dashed; border-color:#ccc;
+    border-width:1px 0 0 0; border-style:solid; border-color:#ccc;
     background:#f8f8f8 none;
+    text-align:center;
     margin:5px 0;
     padding:5px 3px;
 }
