--- a/trunk/intro/template/template.html
+++ b/trunk/intro/template/template.html
@@ -23,7 +23,7 @@
 <h2 id="toc3">安装细节</h2>
     </div>
     <div id="footer">
-        Copyleft &copy; 2009-2010 <a href="http://code.google.com/p/vim-script-cn/">Vim script docs of Chinese term</a>.
+        Copyleft &copy; 2009-2010 <a href="http://code.google.com/p/vim-script-cn/">Vim Script 文档中文团队</a>.
     </div>
 </body>
 </html>
