--- a/trunk/intro/css/style.css
+++ b/trunk/intro/css/style.css
@@ -9,7 +9,7 @@ h1{font-size:2em;}
 h2{font-size:1.5em;}
 h3{font-size:1.2em;}
 
-p{width:40em;}
+#contents{width:40em;}
 
 pre{margin:.5em; padding:5px; overflow:hidden;
   background:#FFF7D7 none;
