--- a/intro/template/template.html
+++ b/intro/template/template.html
@@ -6,7 +6,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 </head>
 <body>
-    <div class="contents">
+    <div id="contents">
 <h1 id="toc1">[http://www.vim.org/scripts/script.php?script_id=ID VimScriptName]</h1>
 
 <p>
