--- a/trunk/intro/css/style.css
+++ b/trunk/intro/css/style.css
@@ -31,6 +31,10 @@ table{table-layout:fixed; border-collapse:collapse; border-spacing:0;
 
 a{text-decoration:none; color:#00e;}
 a:hover{text-decoration:underline;}
+a[href^="http://"],
+a[href^="https://"]{background:transparent url(external.gif) no-repeat scroll right center; padding:0 16px 0 0;}
+a[href^="http://"]:hover,
+a[href^="https://"]:hover{background-image:url(external-hover.gif);}
 
 code{margin:1px 3px; padding:2px; display:inline-block; background:#fff7d2 none; border:1px solid #FAD163;
     -moz-border-radius:4px; -khtml-border-radius:4px; -webkit-border-radius:4px; border-radius:4px;}
