--- a/trunk/intro/template/template.html
+++ b/trunk/intro/template/template.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div id="contents">
-<h1 id="toc1">[http://www.vim.org/scripts/script.php?script_id=ID VimScriptName]</h1>
+<h1 id="toc_1"><a href="http://www.vim.org/scripts/script.php?script_id=ID">VimScriptName</a></h1>
 
 <p>
 作者：<a href="http://www.vim.org/account/profile.php?user_id=ID">AUTHOR</a>
@@ -17,10 +17,10 @@
 脚本类型：公用(utility)
 </p>
 
-<h2 id="toc2">描述</h2>
+<h2 id="toc_1.1">描述</h2>
 
 
-<h2 id="toc3">安装细节</h2>
+<h2 id="toc_1.2">安装细节</h2>
     </div>
     <div id="footer">
         Copyleft &copy; 2009-2010 <a href="http://code.google.com/p/vim-script-cn/">Vim Script 文档中文团队</a>.
